--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     padding: 0;
     list-style-type: none;
     font-family: nunito;
-    font-size: 1.1rem;
+    font-size: 20px;
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
@@ -42,53 +42,53 @@
 
 /* Custom hero section */
 
-.custom-hero-section .header-left-container {
-    padding-top: 90px;
-    min-height: calc(100vh - 100px);
+.custom-hero-section{
+    margin: 10px 40px;
 }
 
-@media(min-width: 992px) {
-    .custom-hero-section .header-left-container {
-        padding-left: 2rem;
+@media (min-width: 768px){
+    .custom-hero-section{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+        margin: 10px 80px;
     }
 }
 
-.custom-hero-section h1,
+.header-left-container .header-left{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 90vh;
+    align-items: flex-start;
+}
+
+.header-left .header-left-top-text .h1{
+    font-family: "DM Serif Display", serif;
+}
+
+.custom-hero-section .h1,
 .custom-hero-section h3 {
     font-family: abel;
     font-weight: 500;
 }
 
-.custom-hero-section h1 {
+.custom-hero-section .h1 {
     font-family: "Dm Serif Display", serif;
     font-weight: 700;
     color: var(--red);
     text-shadow: 2px 2px 0 #6c6a6a, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-    font-size: 3.5rem;
+    font-size: 48px;
     line-height: 3.8rem;
-    margin-bottom: 2rem;
     width: 100%;
-    text-align: center;
 }
 
-.h-txt-container {
-    padding: .5rem;
-    background-color: rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    backdrop-filter: blur(20px);
-    width: 60vw;
-    margin: 20px auto;
-    position: absolute;
-    bottom: 20px;
-}
 
 .h-txt-container p {
-    color: white;
     font-size: 18px;
     font-weight: bold;
     font-family: nunito;
     line-height: 30px;
-    text-align: center;
     cursor: pointer;
 }
 
@@ -101,7 +101,6 @@
 
 .custom-hero-section h3.h-h3 {
     padding: 10px 0px;
-    text-align: center;
     font-family: nunito;
 }
 
@@ -110,25 +109,59 @@
     margin-left: auto
 }
 
-.header-left-info p {
+.instant-valuation a{
+    display: block;
+    width: fit-content;
+    min-width: 100px;
+    padding: 8px 16px;
+    background-color: rgb(0, 115, 255);
+    border: 1px solid rgb(0, 115, 255);
+    color: white;
+    text-decoration: none;
     text-align: center;
+    font-family: rubik;
+    margin: 4px auto;
+}
+
+.instant-valuation a:hover{
+    color: rgb(0, 115, 255);
+    background-color: transparent;
+}
+
+.header-right{
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 .header-right-image {
-    width: fit-content;
+    width: 100%;
     margin: 0px auto;
+    display: flex;
+    flex-direction: column;
+    position: relative;
 }
 
 .header-right img {
-    height: 100vh;
+    width: 100%;
+    max-height: 85vh;
     object-position: right;
     object-fit: contain;
 }
 
-
-.header-left-quiz {
-    margin: 2rem 0px;
+.h-right-txt{
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    background-color: #b1b1b1;
+    padding: 8px 8px 8px 4px;
+    border-radius: 8px 8px 0px 0px;
+    text-align: center;
+    font-weight: bold;
+    font-family: nunito;
+    font-size: 18px;
 }
+
 
 .h-call-button {
     margin-bottom: 20px;
@@ -136,7 +169,6 @@
 
 .header-left-info p {
     color: var(--blue);
-    font-size: 20px;
     cursor: pointer;
 }
 
@@ -145,13 +177,13 @@
         margin: 10px 0px;
     }
 
-    .custom-hero-section h1 {
-        font-size: 2.6rem;
+    .custom-hero-section .h1 {
+        font-size: 40px ;
         background: radial-gradient(#ffffff89, #ffffff43, #ffffff00);
     }
 
     .custom-hero-section h3.h-h3 {
-        font-size: 1.2rem;
+        font-size: 22px;
     }
 
     .custom-hero-section {
@@ -159,26 +191,16 @@
 
     }
 
-    .header-left {
+    .header-left-container .header-left {
         max-width: 540px;
-    }
-
-    .header-right {
-        display: none;
-    }
-
-    .custom-hero-section {
-        background-image: url(https://allforeclosures.ca/images/black-man-holding-minihouse.png);
-        background-size: contain;
-        background-position: right;
-        background-repeat: no-repeat;
+        align-items: center;
     }
 
     .header-left-container {
         background-color: #ffffff37;
     }
 
-    .header-left-container h1 {
+    .header-left-container .h1 {
         background: transparent;
     }
 
@@ -255,7 +277,7 @@
 #suggestionsList.visible {
     display: block;
     position: absolute;
-    top: 2rem;
+    top: 35px;
     left: 1rem;
     width: calc(100% - 1rem);
     background-color: white;
@@ -408,7 +430,7 @@ button.guide-search-btn {
 #guide h1 {
     text-align: center;
     padding: 20px 0px;
-    font-size: 2rem;
+    font-size: 35px;
 }
 
 
@@ -482,7 +504,7 @@ button.guide-search-btn {
 }
 
 .guide-card p {
-    font-size: 1.05rem;
+    font-size: 19px;
 
 }
 
@@ -492,7 +514,7 @@ button.guide-search-btn {
 
 .about {
     width: fit-content;
-    margin: 2rem auto;
+    margin: 35px auto;
     max-width: 80vw;
     background-color: whitesmoke;
     padding: .5rem;
@@ -501,7 +523,7 @@ button.guide-search-btn {
 
 .about h2 {
     font-weight: 600;
-    font-size: 2rem;
+    font-size: 35px;
     font-family: var(--dm);
     text-align: center;
     color: var(--blue);
@@ -535,7 +557,7 @@ button.guide-search-btn {
 h2.about-separator {
     width: fit-content;
     margin: 10px auto;
-    font-size: 2rem;
+    font-size: 35px;
     color: var(--red);
     padding: 5px;
 }
